<resources>
    <string name="app_name">TwitNow</string>
    <string name="don_t_have_an_account_signup">Don\'t have an account? Signup</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="Email">Email</string>
    <string name="logo">Logo</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_an_account_signin">have an account? Signin</string>
    <string name="register">Register</string>
    <string name="save">Save</string>
    <string name="full_name">Full Name</string>
    <string name="profile">profile\n</string>
    <string name="logout">logout</string>
    <string name="Username">Username\n</string>
    <string name="Select_Image">Select Image</string>
    <string name="account_settings">Account Settings</string>
    <string name="Profile">Profile</string>
    <string name="Logout">Logout</string>
    <string name="home">Home</string>
    <string name="chats">Chats</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="search_user">Search User</string>
    <string name="write_message_here">Write message here</string>
    <string name="hello">Hello</string>
    <string name="im_fine">Im fine</string>
    <string name="_10_00">10:00</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="post">Post</string>
    <string name="fullname">Fullname</string>
    <string name="posts">Posts</string>
    <string name="delete">Delete</string>
    <string name="deleteicon">deleteIcon</string>
</resources>