<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="10dp"
    android:background="@drawable/edittext_rounded_corners"
    android:backgroundTint="@color/white"
    android:elevation="2dp"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="52dp"
        android:layout_height="52dp"
        app:cardCornerRadius="50dp"
        android:gravity="center"
        android:layout_margin="10dp"
        >

        <ImageView
            android:id="@+id/userProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/profile"
            android:scaleType="centerCrop"
            android:src="@drawable/circle_background"
            />
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/user_fullname"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                tools:text="@string/full_name"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/_10_00"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:id="@+id/last_message_time_text"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/last_message_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/Username"
            />
    </LinearLayout>

</LinearLayout>
