<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fontFamily="@font/inter"
    tools:context=".ProfileFragment">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <androidx.cardview.widget.CardView
            android:id="@+id/profileCard"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:cardCornerRadius="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            >

            <ImageView
                android:id="@+id/userProfile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/profile"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher_foreground" />

        </androidx.cardview.widget.CardView>


        <EditText
            android:id="@+id/name"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_below="@id/profileCard"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/edittext_rounded_corners"
            android:ellipsize="start"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/full_name"
            android:inputType="text"
            android:textColor="#99AAB5"
            android:textColorHint="#99AAB5"
            android:textSize="13sp"
            />

        <EditText
            android:id="@+id/username"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_below="@id/name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_rounded_corners"
            android:ellipsize="start"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/Username"
            android:inputType="text"
            android:textColor="#99AAB5"
            android:textColorHint="#99AAB5"
            android:textSize="13sp"
            />

        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_below="@id/username"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_rounded_corners"
            android:ellipsize="start"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/Email"
            android:inputType="none"
            android:textColor="#99AAB5"
            android:textColorHint="#99AAB5"
            android:textSize="13sp"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            tools:ignore="TextFields" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_below="@id/email"
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/updateUserDetails"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_below="@id/progressBar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_rounded_corners"
            android:backgroundTint="#99AAB5"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/updateUserDetails"
            android:text="@string/Logout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textColor="#99AAB5"
/>



    </RelativeLayout>


</RelativeLayout>

