<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="10dp"
    android:backgroundTint="@color/white"
    android:elevation="2dp"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="52dp"
            android:layout_height="52dp"
            app:cardCornerRadius="50dp"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            >

            <ImageView
                android:id="@+id/userProfile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/profile"
                android:scaleType="centerCrop"
                android:src="@color/black"
                />
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_gravity="center">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/user_fullname"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    tools:text="@string/full_name"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginStart="5dp"
                    tools:text="@string/username"
                    android:gravity="center"
                    android:textColor="#99AAB5"
                    android:layout_toEndOf="@id/user_fullname"
                    android:textSize="13sp"
                    />
            </RelativeLayout>

            <TextView
                android:id="@+id/post_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Post message here"
                />

            <RelativeLayout
                android:id="@+id/deleteContainer"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/delete_button"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:src="@drawable/delete"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/deleteicon"/>
                <TextView
                    android:id="@+id/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:text="@string/delete"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textColor="#99AAB5"
                    android:layout_toEndOf="@id/delete_button"
                    android:textSize="13sp"
                    />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="0.5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:background="#99AAB5"/>

</LinearLayout>
