<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Profile">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            app:cardCornerRadius="50dp"
            android:layout_centerVertical="true"
            >

            <ImageView
                android:id="@+id/profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/profile"
                android:scaleType="centerCrop"
                android:src="@drawable/circle_background"
                />

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo"
            android:layout_centerInParent="true"
            />


        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/back"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/profileDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_margin="20dp"
        >
        <androidx.cardview.widget.CardView
            android:id="@+id/profileCard"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            >

            <ImageView
                android:id="@+id/userProfile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/profile"
                android:scaleType="centerCrop"
                android:src="@color/black" />


        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/userfullname"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:text="@string/fullname"
             android:layout_below="@+id/profileCard"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/user_Username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_below="@+id/userfullname"
            android:layout_centerHorizontal="true"
            android:textColor="#99AAB5"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_Username"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/posts"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_gravity="center"
                />
            <View
                android:layout_width="60dp"
                android:layout_gravity="center"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="#99AAB5"/>
        </LinearLayout>

    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/post_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profileDetails"
        />

</RelativeLayout>
